--- a/1_CounterApp/styles.css
+++ b/1_CounterApp/styles.css
@@ -14,7 +14,7 @@ body{
     /* text-align: center; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 30px;
     color: rgb(0, 119, 255);
     display: flex;
     flex-direction: column;
@@ -30,6 +30,7 @@ button {
     width: 200px;
     margin-bottom: 5px;
     border-radius: 5px;
+    font-size: 20px;
 }
 
 #increment-btn {
@@ -40,4 +41,9 @@ button {
 
 #save-btn {
     background: darkgreen;
+}
+
+#prev{
+    font-size: 20px;
+    color: rgb(49, 142, 249);
 }
