--- a/8_Drum Kit/style.css
+++ b/8_Drum Kit/style.css
@@ -2,8 +2,49 @@
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 html, body{
     height: 100%;
     width: 100%;
+    display: flex;
+    align-items: center;
+}
+body{
+    background-image: url('background.jpg');
+    background-position: bottom center;
+    background-size: cover;
+}
+.keys{
+    min-height: 100px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    padding: 20px;
+    gap: 20px;
+}
+.key{
+    text-align: center;
+    border: 5px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.339);
+    transition: all .07s ease;
+}
+kbd{
+    font-size: 60px;
+    font-weight: 600;
+    display: block;
+    color: white;
+}
+.sound{
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #ffc600;
+}
+.playing {
+  transform: scale(1.1);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
 }
